style.css
@import url("http://fonts.cdnfonts.com/css/amazon-ember"); /* font url */
/* * {/* universal selektor som påverkar alla element 
  box-sizing: border-box;
  margin: 0;
  padding: 0;
} */

body {
  margin: 0;
  font-family: "amazon ember", sans-serif;
}

#nav-belt > * {
  margin: 10px;
}

#nav-belt {
  background-color: #131921;
  padding-top: 5px;
  /* padding-bottom: 5px;
  padding-left: -5%; */
  padding-right: -5%;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  height: 50px;
}

.nav-belt-button:hover {
  outline: 1px solid #d0d0d0;
  border-radius: 2px;
}

.show {
  display: block;
}

.sok-modul {
  display: flex;
  width: 100%;
  height: 40px;
  overflow: visible;
  border-radius: 4px;
  outline-color: #ff9900;
}

.button-container {
  position: relative;
  overflow: hidden;
  display: inline-block;
}

.button-ish {
  display: inline-block;
  height: 100%;
  padding-left: 7px;
  padding-right: 10px; 
  background-color: #f3f3f3;
  border: none;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
}

.button-container:hover .button-ish {
  background-color: #dbdbdb;
  color: #0f1111;
}

.button-label {
  color: #7a7a7a;
  position: relative;
  top: 22%;
  font-size: 12px;
  font-weight: 500;
}
.button-container:hover .button-label {
  color: #171717;
}

.select-form {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  height: 100%;
  min-width: 100%;
}

.select {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.input-div {
  height: 100%;
  display: flex;
  width: 100%;
  flex: 1;
}

.searchbar-class {
  flex: 1;
  /* background-color: red; */
  /* height: '100%'; */
  /* width: "50%"; */
  padding: 0;
  border: 0;
}

.forstoringsglas {
  background-color: transparent;
  border: none;
  cursor: pointer;
  padding: 0;
}

.topnav {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  background-color: #232f3e;
  font-size: 14px;
  width: 40%;
  height: 25px;
  padding: 7px 60% 7px 0px;
  margin: 0px 0px 0px 0px;
  /* border-style: solid; */
  /* border-color: blue; */
}

.topnav > * {
  margin: 10px;
  /* border-style: solid; */
}
.huvudbox {
  margin-left: 10%;
  margin-right: 10%;
  width: auto;
}

/* .flex-container {
 
} */

.Outer-box {
  /*   display: flex;
  justify-content: row;
  flex-wrap: wrap; */
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(2, 420px);
  /* grid-auto-rows: minmax(50px); */
  margin-top: -350px;
  border-style: solid;
  width: 100%;

  /* grid-auto-rows: minmax(
    150px,
    auto
  ) Gör alla rader minst 150px och max auto höga 
  grid-gap: 20px; /* Definerar margin på både row och column samtidigt */
  /* justify-content: center; 
  align-content: center;
  height: 100px; */
}

.product-card {
  display: flex;
  flex-direction: column;
  align-items: center;
  /* min-width: 23%;
  width: 23%;
  min-height: 50px; */
  height: 90%;
  /* border-style: solid; */

  outline: 0.2vw solid red;
  background-color: white;
  padding-top: 10px;
  padding-bottom: 20px;
  margin: 10px;
}

.product-card .product-card-wrap .box1 > img {
  width: 100%;
  height: 144%;
  object-fit: cover;
  overflow: hidden;
}

.product-card .product-card-wrap .box3 > img {
  width: 100%;
}

.product-card-wrap {
  display: flex;
  flex-direction: column;
  align-items: center;
  outline: 0.2vw solid lightblue;
  width: 90%;
  height: 100%;
  overflow: clip;
}

.product-card-headline {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  width: 100%;
}

/*
    # är för id i html
    .är för class i html
*/
.active {
  text-decoration: none;
  color: #ffffff;
  font: amazon ember light;
  margin-left: 5px;
}

/* #trestreck {
} */

.loginbutton {
  font-family: "amazon ember", sans-serif;
  color: #0f1111;
  background-color: #ffd814;
  width: 100%;
  height: 100px;
  border-radius: 4px;
  /* overflow: visible; */
}

.sign-in-button-div {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: "white";
  height: 142px;
  border-top: 1px solid #ddd;
  border-bottom: 1px solid #ddd;
  margin-top: 20px;
  margin-bottom: 20px;
}

.loginbuttonNedre {
  font-family: "amazon ember", sans-serif;
  color: #0f1111;
  background-color: #ffd814;
  width: 230px;
  height: 28px;
  border-radius: 4px;
  position: relative;
}

.ny-kund-div {
  display: flex;
  flex-direction: row;
}

.small-blue-link {
  text-decoration: none;
}

/* transform: translate(182%, -216%);
   */

.carousel {
  width: 100%;
  border-style: solid;
}

.blue-links {
  display: flex;
  justify-content: flex-start;
  width: 90%;
  text-decoration: none;
}

.product-card.household {
  display: flex;
  flex-direction: column;
  width: 30%;
  height: 30%;
  background-color: aqua;
  justify-content: space-between;
}

.product-card.deal {
  display: flex;
  flex-direction: row;
  width: 10%;
  height: 10%;
  justify-content: space-between;
}

.box1 {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  /* align-self: flex-start; */
  /* width: 90%; */
  /* height: max-content; */
  object-fit: cover;
  overflow: clip;
  position: relative;
  margin-bottom: 10%;
  border-style: solid;
  border-color: #1e9c48;
}
.box2 {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: start;
  flex-wrap: wrap;
  /* min-width: 90%; */
  /* width: 90%; */
  /* height: 0px; */
  border-style: solid;
  border-color: #22131b;
}
.box3 {
  /* display: flex;
  flex-direction: row;
  align-items: start;
  object-fit: cover;
  overflow: clip;
  position: relative; */
  /* flex-wrap: wrap; */
  /* min-width: 90%; */
  width: 100%;
  /* height: 0px; */
  border-style: solid;
  border-color: #22131b;
}

.watch-gallery {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: flex-start;
  /* border-style: solid; */
  /* width: 100%; */
  /* flex-grow: 1; */
}

.product-card .product-card-wrap .box2 .watch-gallery > img {
  width: 100%;
}

.product-card .product-card-wrap .box2 .watch-gallery > p {
  font-size: 14px;
  margin-top: 0;
  margin-bottom: 15px;
}

.navfooter {
  background-color: #37475a;
  width: 100%;
  height: 49px;
}

.back-to-top-button {
  font-family: "amazon ember", sans-serif;
  color: white;
  background-color: transparent;
  width: 100%;
  height: 100%;
  border-style: none;
}
.back-to-top-button:hover {
  background-color: #485769;
}

.bottomnav {
  background-color: #232f3e;
  width: 100%;
  height: 500px;
}

.footer {
  display: block;
  background-color: #131a22;

  width: 100%;
  height: 139.38px;
  color: #dddddd;
  text-align: center;
}

.grid-container {
  display: grid;
  grid-template-columns: repeat (4, 100px); /* Detta ger 4 boxar som alla är 100px */
  grid-auto-rows: minmax(
    150px,
    auto
  ); /* Gör alla rader minst 150px och max auto höga */
  grid-gap: 20px; /* Definerar margin på både row och column samtidigt */
  justify-content: center; /* Places grind in the center of hortizontal axis */
  align-content: center;
  height: 100px;
}

